--- a/Earthquake_Challenge/index.html
+++ b/Earthquake_Challenge/index.html
@@ -13,19 +13,21 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
+
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <!-- Leaflet JS -->
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+    crossorigin=""></script>
+    <!-- API key -->
+    <script type="text/javascript" src="static/js/config.js"></script>
+
 </head>
 <body>
     <!-- div for our map -->
     <div id="map"></div>
 
-<!-- Leaflet JS -->
-<script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
-integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
-crossorigin=""></script>
-
-<!-- API key -->
-<script type="text/javascript" src="static/js/config.js"></script>
-<!-- Our JavaScript -->
-<script type="text/javascript" src="static/js/challenge_logic.js"></script>
+    <!-- Our JavaScript -->
+    <script type="text/javascript" src="static/js/challenge_logic.js"></script>
 </body>
 </html>
