--- a/Earthquake_Challenge/index.html
+++ b/Earthquake_Challenge/index.html
@@ -29,6 +29,6 @@
     <div id="map"></div>
 
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="static/js/challenge_logic.js"></script>
+    <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
 </html>
